Moved navbar styles into navbar.css. Fixed issue with the scroll bar and right side gap when dropdown menu is open. Added small margin top to card display area.

--- a/src/Pages/CardDisplay/CardDisplay.css
+++ b/src/Pages/CardDisplay/CardDisplay.css
@@ -11,11 +11,12 @@ body {
 }
 
 #card-display-outer-container {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  padding: 0 25% 0 25%;
+  margin-top: 2%;
 }
 
 /* Desktop media queries*/
@@ -28,7 +29,6 @@ body {
       justify-content: space-evenly;
       align-content: flex-start;
       column-gap: 0;
-      padding: 0 400px 0 400px;
   }
 }
 
