--- a/src/Pages/Components/Navbar/Navbar.css
+++ b/src/Pages/Components/Navbar/Navbar.css
@@ -4,13 +4,69 @@
   --neonGreen: #6AAF88;
   --strawberry: #FC786E;
   --navyBlue: #2F3E46;
+  --transparentWhite90: #ffffff90
 }
 
-a {
+#navbar-outer-container {
+  flex-grow: 1px;
+}
+
+#navbar-header-container {
+  background-color: var(--neonGreen);
+}
+
+#navbar-search-container {
+  background-color: var(--transparentWhite90);
+  border-radius: 10px;
+  position: relative;
+  margin: 0 5px 0 5px;
+}
+#navbar-search-container:hover {
+  background-color: var(--transparentWhite90);
+}
+
+#search-icon {
+  margin-right: 0;
+  background-color: var(--navyBlue);
+  border-radius: 10px;
+  padding: 5px;
+}
+#search-icon:hover, #search-icon:active, #search-icon:focus {
+  background-color: var(--sunburstYellow);
+}
+
+#search-input {
+  border-radius: 10px;
+  color: inherit;
+}
+
+/* override MUI default to center text */
+.css-yz9k0d-MuiInputBase-input {
+  padding: 5px 5px 5px 10px!important;
+}
+
+#navbar-title {
+  flex-grow: 1;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
+  margin-left: 10px;
+}
+
+#burger-icon {
+  margin-right: 0;
+  background-color: var(--navyBlue);
+  border-radius: 10px;
+  padding: 5px;
+}
+#burger-icon:hover, #burger-icon:active, #burger-icon:focus {
+  background-color: var(--sunburstYellow);
+}
+
+#navbar-title a{
   color: white;
   text-decoration: none;
 }
-a:visited {
+#navbar-title a:visited {
   color: white;
   text-decoration: none;
 }
@@ -33,13 +89,4 @@ a:visited {
 #dropdown-menu {
   display: flex;
   flex-direction: column;
-}
-
-/* Desktop media queries*/
-@media only screen and (min-width: 992px)
-{
-  /* Only display nav bar on desktop sized screens */
-  #nav-bar {
-    display: block;
-  }
 }
